# Dynamic-AI-Agent-CLI-System

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  agent.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  state.py
configs/: flows.yaml
nodes/: __init__.py  llm_node.py  math_node.py  output_node.py  search_node.py
